# Xrecon

./: CMakeLists.txt  INSTALL  Makefile.orig  README  README.md  Xrecon.c  Xrecon.h  data.h
common/: dhead.c  dproc.c  dutils.c  options.c  pars.c  utils.c
common1D/: dproc1D.c  dread1D.c  dutils1D.c  write1D.c
common2D/: dmask2D.c  dproc2D.c  dread2D.c  dutils2D.c  fdfwrite2D.c  noise2D.c  rawwrite2D.c  tifwrite2D.c
common3D/: dproc3D.c  fdfwrite3D.c  rawIO3D.c
nifti/: niftiwrite.c
recon1D/: default1D.c  recon1D.c
recon2D/: default2D.c  profile2D.c  recon2D.c
recon3D/: default3D.c  recon3D.c
reconEPI/: defaultEPI.c  dprocEPI.c  prescanEPI.c  reconEPI.c
